--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
         <item>Daily</item>
         <item>Mon to Fri</item>
     </string-array>
+    <string name="underline_time"> <u>00</u> : <u>00</u> : <u>00</u> </string>
 </resources>
